# ros2_ws_minimal_pi5

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_legion_teleop_python/lib/robot_legion_teleop_python/: control_lock_manager  fpv_camera_mux  fpv_control_arbiter  heartbeat_node  motor_driver_node  teleop_legion_key  terminal_orchestrator  unit_executor_action_server  usb_camera_node
install/robot_legion_teleop_python/share/robot_legion_teleop_python/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_legion_teleop_python/share/robot_legion_teleop_python/config/: robot_profiles.yaml
install/robot_legion_teleop_python/share/robot_legion_teleop_python/launch/: robot_bringup.launch.py  robot_minimal.launch.py
log/: latest_build
src/robot_legion_teleop_python/robot_legion_teleop_python/robot_legion_teleop_python/: motor_driver_node.py
