<?xml version="1.0"?>
<package format="3">
  <name>robot_legion_teleop_python</name>
  <version>0.1.0</version>
  <description>Keyboard teleop, motor driver, camera node, and FPV mux for Robot Legion robots.</description>

  <maintainer email="emilio@vitruvian.systems">Emilio DiStefano</maintainer>
  <license>CC-BY-NC-4.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
